fix jumping b

--- a/src/components/Tribes/Tribes.css
+++ b/src/components/Tribes/Tribes.css
@@ -1,4 +1,3 @@
-/* src/components/TribesPage.css */
 .tribes-page {
   font-family: Arial, sans-serif;
   text-align: center;
@@ -11,27 +10,32 @@
 }
 
 .slideshow-container {
-  margin-top: 75px;
   overflow: hidden;
   width: 100%;
-  margin-bottom: 40px;
+  position: relative;
 }
 
 .slideshow {
   display: flex;
-  animation: scroll 30s linear infinite;
+  width: max-content;
+  animation: scroll 40s linear infinite;
 }
 
 .slideshow img {
   width: 550px;
   height: 350px;
   object-fit: cover;
+  flex-shrink: 0;
   margin-right: 10px;
 }
 
 @keyframes scroll {
-  0% { transform: translateX(0); }
-  100% { transform: translateX(-50%); }
+  0% {
+    transform: translateX(0);
+  }
+  100% {
+    transform: translateX(calc(-50% - 5px));
+  }
 }
 
 .tribes-info {
